--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "socket-node",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": "true",
+  "type": "module",
   "scripts": {
     "start": "npm run build:live",
+    "build": "webpack --config webpack.config.js",
     "tsc": "tsc",
     "build:live": "nodemon --watch src/**/*.ts --exec ts-node src/index.ts"
   },
@@ -12,12 +14,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
     "@types/amqplib": "^0.10.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.25",
+    "babel-loader": "^9.1.3",
     "nodemon": "^3.1.0",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.4",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "amqplib": "^0.10.3",
